@@ -1,3 +1,3 @@
 * Rewrite the id3 info window.
 * implement permission checking.
-* Check saving of playlist. (error)
+* deleting of playlists
