@@ -358,7 +358,6 @@ for filename</property>
 
 	  <child>
 	    <widget class="GtkHBox" id="hbox5">
-	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
 	      <property name="spacing">6</property>
 
@@ -380,9 +379,9 @@ for filename</property>
 	      </child>
 
 	      <child>
-		<widget class="GtkLabel" id="label4">
+		<widget class="GtkLabel" id="label_error">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;span size=&quot;x-small&quot;&gt;&lt;i&gt;This will overwrite any playlist with the same name.&lt;/i&gt;&lt;/span&gt;</property>
+		  <property name="label" translatable="yes">&lt;span size=&quot;x-small&quot;&gt;&lt;i&gt;Playlist allready exists.&lt;/i&gt;&lt;/span&gt;</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
