@@ -1,4 +1,12 @@
-29-02-2005 Qball <qball@qballcow.nl>
+2-03-2005 Qball <qball@qballcow.nl>
+	* src/preferences.c:	Saving a playlist that allready exists now
+	gives an error and the possibility to change the name.
+	* src/libmpd.c:		mpd_ob_playlist_save now returns a error if
+	playlist exists
+	* src/preferences.c:	Fixed showing/selecting output device.
+	* src/libmpd.c:		Added a check version function.
+
+1-03-2005 Qball <qball@qballcow.nl>
 	* src/palylist.c:	Disabled moving of row's for now.
 	* src/playlist.c:	key don't propate used event.
 	* src/player.c:		Fix for bug 373
